--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,9 +20,9 @@ layout: base
           {% endfor %}
         </div>
         <div class="in-page-links" style="margin-top: 10px;">
-          <a href="#publications">Publications</a>
+          <a href="#publications">Publications</a> |
           <a href="#education">Education</a> |
-          <a href="#experience">Experience</a> |
+          <a href="#experience">Experience</a>
         </div>        
       </div>
     </div>
