Add acm link paper

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -84,7 +84,7 @@ layout: base
       <a href="{{ pub.paper }}" class="pub-link" target="_blank">Read paper →</a>
     </div>
     <div class="image-container">
-      <img src="{{ pub.img }}" alt="Diagram Poster" class="publication-image zoomable"/>
+      <img src="{{ pub.img }}" alt="Paper thumbnail for {{ pub.title }}" class="publication-image zoomable"/>
     </div>
   </div>
   {% endfor %}
